--- a/sand.html
+++ b/sand.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://media.istockphoto.com/id/1152129412/vector/water-waves-logo-design-vector-icon.jpg?s=612x612&w=0&k=20&c=ECpNUCEoa9GQtwuIpI3qJ9NW_In6UW_DmSg33JNaAxU=">
-    <title>Air</title>
+    <link rel="icon" href="https://thumbs.dreamstime.com/b/growing-plant-soil-vector-isolated-white-background-growing-plant-soil-vector-275193337.jpg">
+    <title>Sand</title>
     <link rel="stylesheet" href="./sand.css">
 </head>
 <body>
